# workshop8

./: .gitignore  Dockerfile  README.md  iniciar.bat  pyproject.toml  render.yaml
assets/products/: README.txt
clips/: pricing-rules.clp
clips/scenarios/: ejemplo-alta-demanda.clp
product-images/: README.txt
scripts/: dev-web.ps1  render-build.sh  run-clips-scenario.bat  run-dev-api.bat  run-dev-web.bat  sync-product-images.ps1
src/pricing_expert/: __init__.py  catalog.py  catalog_media.py  cli.py  decision.py  engine.py  interview.py  metrics.py  paths.py  propositions.py  service.py
src/pricing_expert/api/: __init__.py  main.py  runner.py  schemas.py
tests/: test_interview_cool.py  test_pricing_rules.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
web/src/cart/: CartContext.tsx
web/src/components/: ExpertPanel.tsx  MastheadDate.tsx  MetricsSimulator.tsx  PriceBadge.tsx  ProductImage.tsx  PropositionStrip.tsx  SiteLayout.tsx
web/src/pages/: CartPage.tsx  HomePage.tsx  InterviewPage.tsx  ProductPage.tsx
